<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/backup_and_restore_screen_left_right_padding"
    android:paddingLeft="@dimen/backup_and_restore_screen_left_right_padding"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/kinrecovery_password_qr_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/backup_and_restore_margin_large"
        android:src="@drawable/backup_and_restore_password_recovery_qr_code_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/purple_blue_v_mark"
        android:translationX="10dp"
        android:translationY="10dp"
        app:layout_constraintBottom_toBottomOf="@id/kinrecovery_password_qr_icon"
        app:layout_constraintEnd_toEndOf="@+id/kinrecovery_password_qr_icon" />

    <TextView
        android:id="@+id/kinrecovery_password_recovery_text"
        style="@style/BackupAndRestoreTitleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/backup_and_restore_password_recovery_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kinrecovery_password_qr_icon" />


    <kin.backupandrestore.widget.PasswordEditText
        android:id="@+id/kinrecovery_password_edit"
        android:layout_width="0dp"
        android:layout_height="@dimen/backup_and_restore_edittext_height"
        android:layout_marginTop="@dimen/backup_and_restore_margin_large"
        app:backup_and_restore_hint="@string/backup_and_restore_enter_password"
        app:backup_and_restore_show_reveal_icon="true"
        app:layout_constraintTop_toBottomOf="@id/kinrecovery_password_recovery_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/kinrecovery_password_done_btn"
        style="@style/BackupAndRestoreButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/backup_and_restore_btn_height"
        android:layout_marginBottom="@dimen/backup_and_restore_btn_margin_bottom"
        android:background="@drawable/backup_and_restore_btn_state_list"
        android:text="@string/backup_and_restore_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
