...
        android:background="@drawable/backup_and_restore_btn_state_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/upload_btn_text"
        style="@style/BackupAndRestoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backup_and_restore_upload_qr_btn"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/upload_btn_frame"
        app:layout_constraintEnd_toEndOf="@id/upload_btn_frame"
        app:layout_constraintStart_toStartOf="@id/upload_btn_frame"
        app:layout_constraintTop_toTopOf="@id/upload_btn_frame"
        />
...
