...
        android:text="@string/public_address_label"
        android:textSize="@dimen/text_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balance_value" />

    <TextView
        android:id="@+id/public_address_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="@dimen/text_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/public_address_label"
...
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_medium"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/backup_current_account"
        android:textSize="@dimen/text_button"
        app:layout_constraintBottom_toTopOf="@+id/restore_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_new_account"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
...
